--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,25 @@
 jobs:
-- job: windows
-  pool:
-    vmImage: vs2017-win2016
-  steps:
-    - template: azure-pipelines-steps.yml
+# - job: windows
+#   pool:
+#     vmImage: vs2017-win2016
+#   steps:
+#     - template: azure-pipelines-steps.yml
 
-- job: linux
-  pool:
-    vmImage: ubuntu-16.04
-  steps:
-    - template: azure-pipelines-steps.yml
+# - job: linux
+#   pool:
+#     vmImage: ubuntu-16.04
+#   steps:
+#     - template: azure-pipelines-steps.yml
 
 - job: macOS
   pool:
     vmImage: macos-10.13
+  strategy:
+    matrix:
+      ruby_24:
+        RUBY_VERSION: 2.4.6      
+      ruby_21:
+        RUBY_VERSION: 2.1.10
+        BUNDLER_VERSION: 1.17.3
   steps:
     - template: azure-pipelines-steps.yml
