set pool name for linux

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,3 +34,5 @@ jobs:
         RUBY_VERSION: ruby-head
         USE_RVM: true
   container: $[ variables.RUBY_IMAGE ]
+  pool:
+    vmImage: ubuntu-16.04
