--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,8 @@ jobs:
         RUBY_VERSION: ruby-head
         USE_RVM: true
   container: $[ variables.RUBY_IMAGE ]
+  pool:
+    vmImage: ubuntu-16.04  
   steps:
     - template: azure-pipelines-steps.yml
     
