--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,6 @@
+variables:
+    System.Debug: true
+
 jobs:
 - job: windows
   pool:
@@ -19,6 +22,7 @@ jobs:
     - powershell: |
         Get-WmiObject Win32_Process | Select-Object ProcessId,ProcessName,Handles,ExecutablePath,PeakPageFileUsage,CommandLine,ThreadCount | ConvertTo-Csv -NoTypeInformation > c:\process-details.csv
         Write-Host "##vso[task.uploadfile]c:\process-details.csv"
+        type c:\process-details.csv
       displayName: Save process details
       continueOnError: true
 
