--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,16 +3,8 @@ jobs:
   pool:
     vmImage: vs2017-win2016
   steps:
-    - template: azure-pipelines-steps.yml
-
-- job: linux
-  pool:
-    vmImage: ubuntu-16.04
-  steps:
-    - template: azure-pipelines-steps.yml
-
-- job: macOS
-  pool:
-    vmImage: macos-10.13
-  steps:
-    - template: azure-pipelines-steps.yml
+  - script: |
+      echo "C:"
+      fsutil volume diskfree c:
+      echo "D:"
+      fsutil volume diskfree d:
