--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,9 @@ jobs:
     vmImage: vs2017-win2016
   steps:
   - script: |
-      echo "C:"
+      echo C:
       fsutil volume diskfree c:
-      echo "D:"
+      echo D:
       fsutil volume diskfree d:
+    displayName: Show free disk space (Windows only)
+    condition: eq(variables.AGENT_OS, 'Windows_NT')
