--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,18 @@
-jobs:
-- job: windows
-  pool:
-    vmImage: vs2017-win2016
-  steps:
-  - script: |
-      echo C:
-      fsutil volume diskfree c:
-      echo D:
-      fsutil volume diskfree d:
-    displayName: Show free disk space (Windows only)
-    condition: eq(variables['Agent.OS'], 'Windows_NT')
+
+strategy:
+  matrix:
+    win:
+      VM_IMAGE: 'vs2017-win2016'
+    linux:
+      VM_IMAGE: 'ubuntu-16.04'
+pool:
+  vmImage: $(VM_IMAGE) 
+steps:
+- bash: foofoo
+- script: |
+    echo C:
+    fsutil volume diskfree c:
+    echo D:
+    fsutil volume diskfree d:
+  displayName: Show free disk space (Windows only)
+  condition: and(always(), eq(variables['Agent.OS'], 'Windows_NT'))
