--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,26 @@
 jobs:
-- job: windows
-  pool:
-    vmImage: vs2017-win2016
-  steps:
-    - template: azure-pipelines-steps.yml
+# - job: windows
+#   pool:
+#     vmImage: vs2017-win2016
+#   steps:
+#     - template: azure-pipelines-steps.yml
 
-- job: linux
-  pool:
-    vmImage: ubuntu-16.04
-  steps:
-    - template: azure-pipelines-steps.yml
+# - job: linux
+#   pool:
+#     vmImage: ubuntu-16.04
+#   steps:
+#     - template: azure-pipelines-steps.yml
 
 - job: macOS
   pool:
     vmImage: macos-10.13
   steps:
-    - template: azure-pipelines-steps.yml
+  - script: |
+      echo "127.0.0.1 $(sudo scutil --get LocalHostName).local" | sudo tee -a /etc/hosts
+    displayName: Fix hostname
+
+  - script: printenv
+    displayName: Dump environment variables
+
+  - script: scriupt/setup-dependencies.sh
+    displayName: Setup dependencies
