Switch ruby version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,12 +15,17 @@ jobs:
   pool:
     vmImage: macos-10.13
   steps:
+  - bash: echo "$(ruby --version)"
   - script: |
       echo "127.0.0.1 $(sudo scutil --get LocalHostName).local" | sudo tee -a /etc/hosts
     displayName: Fix hostname
 
   - script: printenv
     displayName: Dump environment variables
+
+  - task: UseRubyVersion@0
+    inputs:
+      versionSpec: 2.4.6
 
   - script: script/setup-dependencies.sh
     displayName: Setup dependencies
