--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,11 @@ jobs:
 
   - task: UseRubyVersion@0
     inputs:
-      versionSpec: 2.6.2
+      versionSpec: 2.3.x
+
+  - bash: echo "$(ruby --version)"
+
+  - bash: brew update --debug
 
   - script: script/setup-dependencies.sh
     displayName: Setup dependencies
