--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,12 @@ jobs:
 
   - bash: echo "$(ruby --version)"
 
+  - bash: |
+      brew services list
+      brew config
+      brew doctor
+    displayName: More debug
+
   - bash: nohup brew update --debug > brew.out 2> brew.err
     continueOnError: true
 
