--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ jobs:
 
   - bash: |
       brew services list
+      brew cleanup
       brew config
       brew doctor
     displayName: More debug
