--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,8 @@ jobs:
       brew config
       brew doctor
     displayName: More debug
+    env:
+      HOMEBREW_DEVELOPER: 1
 
   - bash: nohup brew update --debug > brew.out 2> brew.err
     continueOnError: true
