--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,19 +30,20 @@ jobs:
 
   - bash: echo "$(ruby --version)"
 
-  - bash: |
-      brew services list
-      brew cleanup --debug --verbose
-      brew config
-      brew doctor
-    displayName: More debug
-    env:
-      HOMEBREW_DEVELOPER: 1
+  # - bash: |
+  #     brew config    
+  #     brew services list
+  #     brew cleanup --debug --verbose    
+  #     brew doctor
+  #   displayName: More debug
+  #   env:
+  #     HOMEBREW_DEVELOPER: 1
 
-  - bash: nohup brew update --debug > brew.out 2> brew.err
+  - bash: (nohup brew update --debug > brew.out 2> brew.err &)
     continueOnError: true
 
   - bash: |
+      sleep 120
       echo "$(cat brew.out)"
       echo "$(cat brew.err)"
     displayName: 'Show brew output'
