--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,3 +1,7 @@
 steps:
-- bash: |
-    printenv
+- bash: cp text.txt $(Build.ArtifactStagingDirectory)
+
+- task: PublishPipelineArtifact@0
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)'
+    artifactName: TFConfig
