--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,7 @@
 jobs:
-- job: windows
-  pool:
-    vmImage: vs2017-win2016
-  steps:
-    - template: azure-pipelines-steps.yml
+- template: azure-pipelines-job.yml
+  parameters:
+    IMAGE: foo
 
 - job: linux
   pool:
