--- a/job.yml
+++ b/job.yml
@@ -10,9 +10,9 @@ jobs:
     vmImage: ${{ parameters.vmImage }}
   strategy:
     matrix:
-      - ${{ each matrix in parameters.matrix }}:
-          ${{ matrix.key }}: ${{ matrix.value }}
-          IMAGE: ${{ matrix.key }}
+      '${{ each matrix in parameters.matrix }}':
+        ${{ matrix.key }}: ${{ matrix.value }}
+        IMAGE: ${{ matrix.key }}
   steps:
   - script: |
       echo "Common"
