Test log telemtry

--- a/azure-pipelines-steps.yml
+++ b/azure-pipelines-steps.yml
@@ -1,3 +1,7 @@
 steps:
-- bash: |
-    printenv
+- script: |
+   echo "Here is the start"
+   echo "##vso[telemetry.publish area=WillSmytheTest;feature=Test1]"
+   echo "##vso[telemetry.publish area=WillSmytheTest;feature=Test2]{}"
+   echo "Here is the end"
+  displayName: 'Log telemetry'
