--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,6 @@ jobs:
       targetPath: files/a3
     displayName: Publish pipeline artifact (a3)
 
-  - download: current
-    artifact: a3
-
 ############################
 # Download jobs
 ############################
@@ -45,7 +42,7 @@ jobs:
 - template: download-job.yml
   parameters:
     id: test3
-    description: 'Test 3 (artifact=,pattern=**/*.dll)'    
+    description: 'Test 3 (artifact=,pattern=**/*.dll)'
     patterns: '**/*.dll'
 
 - template: download-job.yml
@@ -140,11 +137,12 @@ jobs:
     - checkout: none
     - bash: printenv
 
-
     # Current : ???
     # Expected: $(PIPELINE_WORKSPACE)/{artifact1...x}/**
     - task: DownloadPipelineArtifact@0
       displayName: 'Download all (path not specified)'
+
+    - bash: failmenow
 
     # Current : ???
     # Expected: $(PIPELINE_WORKSPACE)/results1/{artifact1...x}/**
