try download keyword

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,14 @@ jobs:
       targetPath: files/a3
     displayName: Publish pipeline artifact (a3)
 
+  - download: current 
+    path: /etc/var/pipelines
+
+  - bash: |
+      cd /etc/var/pipelines
+      grep -r -l "." | grep -v ".git"  | grep -v "node_modules" | grep -v "_tasks" | sort
+    displayName: 'Show downloaded artifacts'
+
 ############################
 # Download jobs
 ############################
