--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,7 @@ jobs:
 ############################
 - job: buildartifact
   displayName: 'Build artifacts'
+  condition: never()
   steps:
     # **PUBLISH**
     - task: PublishBuildArtifacts@1
@@ -132,6 +133,7 @@ jobs:
 - job: targetPath
   displayName: 'Pipeline artifacts (download path tests)'
   dependsOn: publish
+  condition: never()
   strategy:
     matrix:
       linux:
