--- a/download-job.yml
+++ b/download-job.yml
@@ -7,6 +7,7 @@ parameters:
 jobs:
 - job: ${{ parameters.id }}
   dependsOn: publish
+  condition: never()
   variables:
     TEST_DESCRIPTION: ${{ parameters.description }}
   steps:
